--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.0.28 (unreleased)
+
+** libgnutls: Corrected gnutls_cipher_decrypt2() when used with AEAD  
+ciphers (i.e., AES-GCM).
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.0.27 (released 2013-01-03)
 
 ** libgnutls: Fixed record padding parsing issue. Reported by Kenny
