--- a/NEWS
+++ b/NEWS
@@ -33,7 +33,7 @@ in all ciphersuites, which makes length-hiding more efficient and solves some ti
 extension. Whether length-hiding can be used on a given session can be checked using gnutls_record_can_use_length_hiding().
 
 ** libgnutls: Corrected gnutls_cipher_decrypt2() when used with AEAD
-ciphers (i.e., AES-GCM).
+ciphers (i.e., AES-GCM). Reported by William McGovern.
 
 ** libgnutls-dane: Added function to specify a DLV file.
 
