--- a/NEWS
+++ b/NEWS
@@ -27,10 +27,15 @@ strings which increase the minimum to 1248 and 1776 respectively.
 ** libgnutls: Added the gnutls_sbuf_t structure and accompanying 
 functions to enable buffering in sending application data.
 
-** libgnutls: Removed default random padding, and added a length-hiding interface instead,  together with a %NEW_PADDING priority string. The priority enables a new
-padding mechanism in TLS allowing arbitrary padding in TLS records
-in all ciphersuites, which makes length-hiding more efficient and solves some timing attacks. Both the server and the client must support this
-extension. Whether length-hiding can be used on a given session can be checked using gnutls_record_can_use_length_hiding().
+** libgnutls: Removed default random padding, and added a length-hiding interface 
+instead.  Both the server and the client must support this extension. Whether 
+length-hiding can be used on a given session can be checked using
+gnutls_record_can_use_length_hiding().
+
+** Added the experimental %NEW_PADDING priority string. It enables a 
+new padding mechanism in TLS allowing arbitrary padding in TLS records
+in all ciphersuites, which makes length-hiding more efficient and solves 
+the issues with timing attacks on CBC ciphersuites.
 
 ** libgnutls: Corrected gnutls_cipher_decrypt2() when used with AEAD
 ciphers (i.e., AES-GCM). Reported by William McGovern.
