xssl API moved to xssl library

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ in a template from an RFC4514 string.
 
 ** danetool: Added options: --dlv and --insecure. Suggested by Paul Wouters.
 
+** libgnutls-xssl: Added an experimental TLS library with an very simple
+API.
+
 ** libgnutls: DN variable 'T' was expanded to 'title'.
 
 ** libgnutls: Added functions to directly set the DN in a certificate
