--- a/doc/latex/cover.tex
+++ b/doc/latex/cover.tex
@@ -11,8 +11,8 @@ to Patrick Pelletier and Andreas Metzler.
 
 
 \begin{quotation}
-Copyright \copyright{} 2001-2012 Free Software Foundation, Inc.
-Copyright \copyright{} 2001-2012 Nikos Mavrogiannopoulos
+Copyright \copyright{} 2001-2013 Free Software Foundation, Inc.\\
+Copyright \copyright{} 2001-2013 Nikos Mavrogiannopoulos
 \end{quotation}
 
 \begin{flushleft}
