--- a/doc/latex/cover.tex
+++ b/doc/latex/cover.tex
@@ -3,7 +3,7 @@
 \begin{quotation}
 This document includes text contributed by
 Nikos Mavrogiannopoulos, Simon Josefsson, Daiki Ueno, 
-Carolin Latze and Andrew McDonald. Several corrections are due
+Carolin Latze, Alfredo Pironti and Andrew McDonald. Several corrections are due
 to Patrick Pelletier and Andreas Metzler.
 \end{quotation}
 
