--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,14 @@ Copyright (C) 2000, 2001, 2002, 2003, 2004, 2005,
               2006, 2007, 2008, 2009, 2010, 2011 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+Version 2.12.23 (unreleased)
+
+** libgnutls: Eliminated memory leak in PCKS #11 initialization.
+Report and fix by Sam Varshavchik.
+
+** API and ABI modifications:
+No changes since last version.
+
 Version 2.12.22 (released 2013-01-05)
 
 ** libgnutls: Stricter RSA PKCS #1 1.5 encoding and decoding. Reported
