--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,10 @@ in a template from an RFC4514 string.
 ** libgnutls-xssl: Added an experimental TLS library with an very simple
 API.
 
+** libgnutls-dane: Added function to specify a DLV file.
+
+** libgnutls: Heartbeat code was made optional.
+
 ** libgnutls: Fixes in server side of DTLS-0.9.
 
 ** libgnutls: DN variable 'T' was expanded to 'title'.
@@ -37,15 +41,15 @@ instead.  Both the server and the client must support this extension. Whether
 length-hiding can be used on a given session can be checked using
 gnutls_record_can_use_length_hiding().
 
-** Added the experimental %NEW_PADDING priority string. It enables a 
-new padding mechanism in TLS allowing arbitrary padding in TLS records
+** libgnutls: Added the experimental %NEW_PADDING priority string. It enables 
+a new padding mechanism in TLS allowing arbitrary padding in TLS records
 in all ciphersuites, which makes length-hiding more efficient and solves 
 the issues with timing attacks on CBC ciphersuites.
 
 ** libgnutls: Corrected gnutls_cipher_decrypt2() when used with AEAD
 ciphers (i.e., AES-GCM). Reported by William McGovern.
 
-** libgnutls-dane: Added function to specify a DLV file.
+** libgnutls: Licensed under LGPLv2.1.
 
 ** API and ABI modifications:
 gnutls_db_check_entry_time: Added
