--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ See the end for copying conditions.
 ** libgnutls: Corrected gnutls_cipher_decrypt2() when used with AEAD  
 ciphers (i.e., AES-GCM).
 
+** libgnutls: Fixes in record padding parsing to prevent a timing attack. 
+Issue reported by Kenny Patterson and Nadhem Alfardan.
+
 ** API and ABI modifications:
 No changes since last version.
 
