DN variable 'T' was expanded to 'title'

--- a/NEWS
+++ b/NEWS
@@ -11,6 +11,8 @@ Report and fix by Sam Varshavchik.
 ** libgnutls: Fixes in record padding parsing to prevent a timing attack. 
 Issue reported by Kenny Patterson and Nadhem Alfardan.
 
+** libgnutls: DN variable 'T' was expanded to 'title'.
+
 ** API and ABI modifications:
 No changes since last version.
 
