--- a/NEWS
+++ b/NEWS
@@ -12,6 +12,8 @@ ciphers (i.e., AES-GCM).
 ** libgnutls: Fixes in record padding parsing to prevent a timing attack. 
 Issue reported by Kenny Patterson and Nadhem Alfardan.
 
+** libgnutls: DN variable 'T' was expanded to 'title'.
+
 ** API and ABI modifications:
 No changes since last version.
 
