--- a/NEWS
+++ b/NEWS
@@ -20,7 +20,7 @@ in a template from an RFC4514 string.
 ** libgnutls: DN variable 'T' was expanded to 'title'.
 
 ** libgnutls: Fixes in record padding parsing to prevent a timing attack. 
-Issue reported by Kenny Patterson and Nadhem Alfardan.
+Issue reported by Kenny Paterson and Nadhem Alfardan.
 
 ** libgnutls: Added functions to directly set the DN in a certificate
 or request from an RFC4514 string.
@@ -41,7 +41,7 @@ buffering in sending application data.
 ** libgnutls: Removed default random padding, and added a length-hiding interface 
 instead.  Both the server and the client must support this extension. Whether 
 length-hiding can be used on a given session can be checked using
-gnutls_record_can_use_length_hiding().
+gnutls_record_can_use_length_hiding(). Contributed by Alfredo Pironti.
 
 ** libgnutls: Added the experimental %NEW_PADDING priority string. It enables 
 a new padding mechanism in TLS allowing arbitrary padding in TLS records
