--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -373,8 +373,17 @@
 @misc{PKCS11URI,
   author="Jan Pechanec and Darren J. Moffat",
   title="{The PKCS 11 URI Scheme}",
-  month="August",
-  year=2011, 
-  note = "Work in progress, available from \url{http://tools.ietf.org/html/draft-pechanec-pkcs11uri-05}",
-  url = "http://tools.ietf.org/html/draft-pechanec-pkcs11uri-05"
+  month="January",
+  year=2013, 
+  note = "Work in progress, available from \url{http://tools.ietf.org/html/draft-pechanec-pkcs11uri-08}",
+  url = "http://tools.ietf.org/html/draft-pechanec-pkcs11uri-08"
+}
+
+@misc{TPMURI,
+  author="Carolin Latze and Nikos Mavrogiannopoulos",
+  title="{The TPMKEY URI Scheme}",
+  month="January",
+  year=2013, 
+  note = "Work in progress, available from \url{http://tools.ietf.org/html/draft-mavrogiannopoulos-tpmuri-01}",
+  url = "http://tools.ietf.org/html/draft-mavrogiannopoulos-tpmuri-01"
 }
