--- a/doc/cha-tokens.texi
+++ b/doc/cha-tokens.texi
@@ -386,7 +386,7 @@ In GnuTLS the TPM functionality is available in @code{gnutls/tpm.h}.
 The RSA keys in the TPM module may either be stored in a flash memory
 within TPM or stored in a file in disk. In the former case the key can
 provide operations as with @acronym{PKCS} #11 and is identified by
-a URL. The URL is of the following form.
+a URL. The URL is described in @xcite{TPMURI} and are of the following form.
 @verbatim
 tpmkey:uuid=42309df8-d101-11e1-a89a-97bb33c23ad1;storage=user
 @end verbatim
