fixed issue in gnutls_x509_privkey_import2()

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.8 (unreleased)
+
+** Fixed issue in gnutls_x509_privkey_import2() which didn't return
+GNUTLS_E_DECRYPTION_FAILED in all cases.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.1.7 (released 2012-02-04)
 
 ** certtool: Added option "dn" which allows to directly set the DN
