certtool's --to-p12 will now ask for a password to generate PKCS #12 files.
That is when provided an encrypted key file. Reported by Yan Fiz.

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,15 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
+* Version 3.1.9 (unreleased)
+
+** certtool: option --to-p12 will now ask for a password to generate
+a PKCS #12 file from an encrypted key file. Reported by Yan Fiz.
+
+** API and ABI modifications:
+No changes since last version.
+
+
 * Version 3.1.8 (released 2013-02-10)
 
 ** libgnutls: Fixed issue in gnutls_x509_privkey_import2() which didn't return
