--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@ See the end for copying conditions.
 a PKCS #12 file from an encrypted key file. Reported by Yan Fiz.
 
 ** API and ABI modifications:
-No changes since last version.
+gnutls_handshake_set_random: Added
 
 
 * Version 3.1.8 (released 2013-02-10)
