--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,10 @@ See the end for copying conditions.
 
 * Version 3.1.10 (unreleased)
 
+** certtool: When generating PKCS #12 files use by default the 
+ARCFOUR (RC4) cipher to be compatible with devices that don't
+support AES with PKCS #12.
+
 ** libgnutls-dane: Updated DANE verification options.
 
 ** API and ABI modifications:
