--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@ support AES with PKCS #12.
 
 ** libgnutls: Correctly detect the target CPU when cross-compiling.
 
+** libgnutls: Load CA certificates in android systems.
+
 ** libgnutls-dane: Updated DANE verification options.
 
 ** API and ABI modifications:
