--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,9 @@ gnutls_x509_crt_get_issuer_dn2: Added
 gnutls_x509_crt_get_dn2: Added
 gnutls_x509_crl_get_issuer_dn2: Added
 gnutls_x509_crq_get_dn2: Added
+gnutls_x509_trust_list_remove_trust_mem: Added
+gnutls_x509_trust_list_remove_trust_file: Added
+gnutls_x509_trust_list_remove_cas: Added
 
 
 * Version 3.1.9 (released 2013-02-27)
