--- a/NEWS
+++ b/NEWS
@@ -26,6 +26,7 @@ gnutls_x509_trust_list_remove_trust_mem: Added
 gnutls_x509_trust_list_remove_trust_file: Added
 gnutls_x509_trust_list_remove_cas: Added
 gnutls_session_get_desc: Added
+gnutls_privkey_sign_raw_data: Added
 
 
 * Version 3.1.9 (released 2013-02-27)
