--- a/doc/latex/cover.tex
+++ b/doc/latex/cover.tex
@@ -10,10 +10,10 @@ to Patrick Pelletier and Andreas Metzler.
 \vspace*{\stretch{2}}
 
 
-\begin{quotation}
+\begin{flushleft}
 Copyright \copyright{} 2001-2013 Free Software Foundation, Inc.\\
 Copyright \copyright{} 2001-2013 Nikos Mavrogiannopoulos
-\end{quotation}
+\end{flushleft}
 
 \begin{flushleft}
 Permission is granted to copy, distribute and/or modify this document
