--- a/doc/latex/gnutls.bib
+++ b/doc/latex/gnutls.bib
@@ -7,6 +7,19 @@
 	url = "http://tools.ietf.org/html/draft-ietf-websec-key-pinning-01"
 }
 
+@misc{RFC5280,
+  author="D. Cooper and S. Santesson and S. Farrell and S. Boeyen and R. Housley and W. Polk",
+  title="{Internet X.509 Public Key Infrastructure Certificate and Certificate Revocation List (CRL) Profile}",
+  series="Request for Comments",
+  number="5280",
+  howpublished="RFC 5280 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2008,
+  month=may,
+  note="Available from \url{http://www.ietf.org/rfc/rfc5280}",
+}
+
 @Misc{ RFC5764,
 	author = "David McGrew and Eric Rescorla",
 	title = "{Datagram Transport Layer Security (DTLS) Extension to Establish Keys for the Secure Real-time Transport Protocol (SRTP)}",
