--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,8 @@ support AES with PKCS #12.
 ** configure: Trust store file must be explicitly set or unset when 
 cross compiling.
 
+** libgnutls: Private keys are overwritten on deinitialization.
+
 ** API and ABI modifications:
 gnutls_x509_crt_get_issuer_dn2: Added
 gnutls_x509_crt_get_dn2: Added
