--- a/NEWS
+++ b/NEWS
@@ -13,7 +13,7 @@ support AES with PKCS #12.
 ** libgnutls: gnutls_pkcs11_reinit() will reinitialize all PKCS #11
 modules, and not only the ones loaded via p11-kit.
 
-** libgnutls: Load CA certificates in android systems.
+** libgnutls: Load CA certificates in android 4.x systems.
 
 ** libgnutls: PKCS #11 slots are scanned only when needed, not
 on initialization. This speeds up gnutls initialization when smart
