--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,8 @@ support AES with PKCS #12.
 on initialization. This speeds up gnutls initialization when smart
 cards are present.
 
+** libgnutls: Added Salsa20R20 cipher (experimental)
+
 ** libgnutls-dane: Updated DANE verification options.
 
 ** configure: Trust store file must be explicitly set or unset when 
@@ -34,6 +36,7 @@ gnutls_x509_trust_list_remove_cas: Added
 gnutls_session_get_desc: Added
 gnutls_privkey_sign_raw_data: Added
 gnutls_pkcs11_status: Added
+gnutls_cipher_get_iv_size: Added
 
 
 * Version 3.1.9 (released 2013-02-27)
