--- a/NEWS
+++ b/NEWS
@@ -37,6 +37,7 @@ gnutls_session_get_desc: Added
 gnutls_privkey_sign_raw_data: Added
 gnutls_pkcs11_status: Added
 gnutls_cipher_get_iv_size: Added
+gnutls_hmac_set_nonce: Added
 
 
 * Version 3.1.9 (released 2013-02-27)
