--- a/NEWS
+++ b/NEWS
@@ -21,6 +21,9 @@ cards are present.
 ** libgnutls: Corrected issue in the (deprecated) external key
 signing interface, when used with TLS 1.2. Reported by Bjorn H. Christensen.
 
+** libgnutls: Fixes in openpgp handshake with fingerprints. Reported by 
+Joke de Buhr.
+
 ** libgnutls-dane: Updated DANE verification options.
 
 ** configure: Trust store file must be explicitly set or unset when 
