--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,7 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.10 (unreleased)
+* Version 3.1.10 (released 2013-03-22)
 
 ** certtool: When generating PKCS #12 files use by default the 
 ARCFOUR (RC4) cipher to be compatible with devices that don't
@@ -39,7 +39,7 @@ gnutls_x509_trust_list_remove_trust_file: Added
 gnutls_x509_trust_list_remove_cas: Added
 gnutls_session_get_desc: Added
 gnutls_privkey_sign_raw_data: Added
-gnutls_pkcs11_status: Added
+gnutls_privkey_status: Added
 
 
 * Version 3.1.9 (released 2013-02-27)
