--- a/NEWS
+++ b/NEWS
@@ -2,7 +2,16 @@ GnuTLS NEWS -- History of user-visible changes.                -*- outline -*-
 Copyright (C) 2000-2012 Free Software Foundation, Inc.
 See the end for copying conditions.
 
-* Version 3.1.10 (unreleased)
+* Version 3.2.0 (unreleased)
+
+** libgnutls: Added Salsa20 cipher (experimental)
+
+** API and ABI modifications:
+gnutls_cipher_get_iv_size: Added
+gnutls_hmac_set_nonce: Added
+
+
+* Version 3.1.10 (released 2013-03-22)
 
 ** certtool: When generating PKCS #12 files use by default the 
 ARCFOUR (RC4) cipher to be compatible with devices that don't
@@ -17,8 +26,6 @@ support AES with PKCS #12.
 ** libgnutls: PKCS #11 slots are scanned only when needed, not
 on initialization. This speeds up gnutls initialization when smart
 cards are present.
-
-** libgnutls: Added Salsa20 cipher (experimental)
 
 ** libgnutls: Corrected issue in the (deprecated) external key
 signing interface, when used with TLS 1.2. Reported by Bjorn H. Christensen.
@@ -41,9 +48,10 @@ gnutls_x509_trust_list_remove_trust_file: Added
 gnutls_x509_trust_list_remove_cas: Added
 gnutls_session_get_desc: Added
 gnutls_privkey_sign_raw_data: Added
-gnutls_pkcs11_status: Added
-gnutls_cipher_get_iv_size: Added
-gnutls_hmac_set_nonce: Added
+gnutls_privkey_status: Added
+
+
+
 
 
 * Version 3.1.9 (released 2013-02-27)
