--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,8 @@ See the end for copying conditions.
 
 ** libgnutls: Added Salsa20 cipher (experimental)
 
+** libgnutls: Added UMAC-96 and UMAC-128 MACs (experimental)
+
 ** API and ABI modifications:
 gnutls_cipher_get_iv_size: Added
 gnutls_hmac_set_nonce: Added
